--- a/web/styles/stylesAdd.css
+++ b/web/styles/stylesAdd.css
@@ -8,23 +8,11 @@ body {
 aside {
     float: left;
     width: 200px;
+    height: 200px;
 }
 section {
     margin-left: 200px;
     padding-bottom: 50px;
-}
-
-input[type="text"] {
-    background-color: #F5F5DC;
-    border: 2px solid #A52A2A;
-    height: 35px;
-    color: #A52A2A;
-    vertical-align: top;
-}
-
-img[id="logo"]{
-    width: 30%;
-    height: 15%;
 }
 
 table {
@@ -32,16 +20,7 @@ table {
     color: #A52A2A;
     position: relative;
     left: 35%;
-}
-
-input[type="submit"]
-{
-    background-color: #F5F5DC;
-    border: 2px solid #A52A2A;
-    color: #A52A2A;
-    width: 250px;
-    font: 15px 'Kurale', serif;
-    margin-top: 80px;
+    margin-top: 5%;
 }
 
 button {
@@ -52,24 +31,59 @@ button {
     font: 20px 'Kurale', serif;
     font-family: 'Kurale', serif;
 }
-p {
-    margin: 20px 0;
+
+img[id="logo"]{
+    width: 30%;
+    height: 15%;
 }
 
 #wrapper {
     max-width: 960px;
     margin: auto;
+    padding-bottom: 1%;
 }
 
 header {
     padding: 20px 0;
 }
 
-button[name="button_sign"]
-{
-    margin: 0 0 0 50px;
+
+section {
+    padding-bottom: 30px;
 }
-form{
+
+
+.block
+{
+    position: relative;
+    width: 40%;
+}
+
+.block2
+{
+    position: relative;
+    width: 40%;
+    margin-top: 8%;
+}
+
+input {
+    width: 200px;
+    margin: 0px 0px 5px 5px;
+}
+
+input[type="submit"]
+{
+    background-color: #F5F5DC;
+    border: 2px solid #A52A2A;
+    color: #A52A2A;
+    width: 220px;
+    font: 15px 'Kurale', serif;
+    margin-top: 5%;
+}
+
+
+
+form {
     float: right;
 }
 
@@ -104,20 +118,12 @@ nav li :hover{
 }
 
 
-section {
-    padding-bottom: 30px;
-}
-
-img[id="kino"]{
-    width: 100%;
-}
-
 footer {
     background: #A52A2A;
     color: #F5F5DC;
     font-size: 14px;
+    margin-top: 11%;
 }
-
 
 #footer {
     max-width: 960px;
@@ -125,7 +131,6 @@ footer {
     padding: 10px 0;
     height: 90px;
 }
-
 
 footer a {
     color: #F5F5DC;
@@ -135,7 +140,6 @@ footer a {
     margin-top:-15px;
     width: 250px;
     float: left;
-    padding-right: 15px;
 }
 
 #sitemap div {
@@ -174,11 +178,14 @@ footer a {
     margin-bottom: -10px;
 }
 
+html
+{
+    overflow-x: hidden;
+}
+
+
 @media only screen and (max-width: 500px) {
     nav li, button {
         font: 15px 'Kurale', serif;
     }
 }
-
-
-
