Save and delete benefits

--- a/web/styles/stylesAdd.css
+++ b/web/styles/stylesAdd.css
@@ -79,10 +79,18 @@ input[type="submit"]
     width: 220px;
     font: 15px 'Kurale', serif;
     margin-top: 5%;
-    margin-bottom: 5%;
 }
 
 input[type="button"]
+{
+    background-color: #F5F5DC;
+    border: 2px solid #A52A2A;
+    color: #A52A2A;
+    width: 220px;
+    font: 15px 'Kurale', serif;
+}
+
+input[name="del"]
 {
     background-color: #F5F5DC;
     border: 2px solid #A52A2A;
