--- a/web/styles/stylesAdmin.css
+++ b/web/styles/stylesAdmin.css
@@ -69,9 +69,15 @@ button[name="button_sign"]
 {
     margin: 0 0 0 50px;
 }
-form{
+
+form[name="sign"]{
     float: right;
 }
+
+form[name="search"]{
+    float: right;
+}
+
 
 nav a {
     text-decoration: none;
