--- a/web/styles/stylesAdd.css
+++ b/web/styles/stylesAdd.css
@@ -71,7 +71,16 @@ input {
     margin: 0px 0px 5px 5px;
 }
 
-input[type="submit"]
+textarea{
+    background-color: #F5F5DC;
+    border: 2px solid #A52A2A;
+    color: #A52A2A;
+    font: 15px 'Kurale', serif;
+    margin: 0px 0px 5px 5px;
+}
+
+
+input[type="submit"], [type="reset"]
 {
     background-color: #F5F5DC;
     border: 2px solid #A52A2A;
@@ -102,7 +111,7 @@ input[name="del"]
     font: 15px 'Kurale', serif;
 }
 
-input[type="text"]
+input[type="text"],[type="number"]
 {
     background-color: #F5F5DC;
     border: 2px solid #A52A2A;
@@ -111,16 +120,14 @@ input[type="text"]
     font: 15px 'Kurale', serif;
 }
 
+
+
 input[type="hidden"]
 {
     margin: 0;
 }
 
-form[name="sign"]{
-    float: right;
-}
-
-form[name="search"]{
+form[name="sign"],[name="search"]{
     float: right;
 }
 
